# MyTool

./: README.md
data/: output.txt
data/08/labels/: 000000.label  000001.label  000002.label  000003.label  000004.label  000005.label  000006.label  000007.label  000008.label  000009.label  000010.label  000011.label  000012.label  000013.label  000014.label  000015.label  000016.label  000017.label  000018.label  000019.label  000020.label  000021.label  000022.label  000023.label  000024.label  000025.label  000026.label  000027.label  000028.label  000029.label  000030.label  000031.label  000032.label  000033.label  000034.label  000035.label  000036.label  000037.label  000038.label  000039.label  (+160 more)
data/08_txt/label_txt/: 000536.txt
dataset/KittiTracking/pose/: pose.txt
launch/: timerecord.launch
my_pcl_tool/: CMakeLists.txt
my_pcl_tool/src/: viewbin.cpp  viewlabel.cpp
my_ros_tool/: CMakeLists.txt
my_ros_tool/launch/: timerecord.launch
my_ros_tool/src/: DySegMovingVisualize.cpp  KittiCleanGround_demo.cpp  KittiMovingVisualize.cpp  MfmosVisualize.cpp  MyKittiSemantic.cpp  SemanticKitiiLabelVisualize.cpp  demo_imu_read.cpp
scipts/cppnode/: 3dboxinPCL.cpp  CMakeLists.txt  gem.cpp  showSpheroid.cpp
scipts/my/: collect.py  labelconvert.py  meshgrid.py  testantything.py
scipts/testdata/: 000003.txt  000540.txt
